# DSA4262-Addictive-and-Depressive-Phone-Usage

./: Agents.md  Final Report.md  Model_requirement.md  README.md  main.py  pyproject.toml
data/: DSA4262 Group 10 Survey Questions.csv  DSA4262 Group 10 Survey Questions.xlsx  DSA4262 Phone Use Survey.csv  DSA4262_Group_10_Survey_Questions_Summary.csv  DSA4262_Group_10_Survey_Questions_Survey_Questions.csv  DSA4262_Group_10_Survey_Questions_Survey_Questions_(Final).csv  DSA4262_Survey_Cleaned.csv  DSA4262_Survey_Cleaned_reorder.csv
excel_to_csv/: excel_to_csv.py
notebooks/: behavioural_risk_phq9_validation.ipynb  data_processing.ipynb  eda.ipynb  model.ipynb  modelling_9th_April.ipynb
pre_exploratory_data/: dep_anx_prevalence.csv  dep_sg_data analysis.ipynb  kaggle_data_analysis.ipynb
