[project]
name = "dsa4262-addictive-and-depressive-phone-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"matplotlib>=3.10.0",
	"notebook>=7.5.5",
	"numpy>=2.3.0",
	"pandas>=2.3.0",
	"pip>=26.0.1",
	"scikit-learn>=1.7.0",
	"seaborn>=0.13.0",
]
